<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>pe.gob.onpe.votodigital</groupId>
    <artifactId>ElGamalCipher</artifactId>
    <version>1.1.0</version>
    <packaging>jar</packaging>
    <name>ElGamalCipher</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <local.user.home>${user.home}</local.user.home>
        <verificatum.base.path>${local.user.home}/verificatum-vmn-3.1.0-full</verificatum.base.path>
    </properties>

    <dependencies>
        <!-- Dependencias de Verificatum -->
        <dependency>
            <groupId>com.verificatum</groupId>
            <artifactId>verificatum-vcr-vmgj-vecj</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.verificatum</groupId>
            <artifactId>verificatum-vmgj</artifactId>
            <version>1.3.0</version>
        </dependency>
        <dependency>
            <groupId>com.verificatum</groupId>
            <artifactId>verificatum-vecj</artifactId>
            <version>2.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Plugin para compilar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>-Djava.library.path=${project.basedir}/libs</argLine>
                </configuration>
            </plugin>
            <!-- Plugin para ejecutar -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <mainClass>pe.gob.onpe.votodigital.elgamalcipher.ElGamalMain</mainClass>
                    <environmentVariables>
                        <LD_LIBRARY_PATH>${verificatum.base.path}/verificatum-vecj-2.2.0/native/.libs:${verificatum.base.path}/verificatum-vmgj-1.3.0/native/.libs</LD_LIBRARY_PATH>
                    </environmentVariables>
                    <executable>${java.home}/bin/java</executable>
                </configuration>
            </plugin>
            <!-- Fat JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <appendAssemblyId>false</appendAssemblyId>
                    <archive>
                        <manifest>
                            <mainClass>pe.gob.onpe.votodigital.elgamalcipher.ElGamalMain</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
